<?xml version="1.0" encoding="utf-8"?><!--
  ~ Magic Annotator - The only thing you need to write down whatever you want.
  ~ Copyright (C) 2013 Nahuel Barrios <barrios.nahuel@gmail.com>.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="app_name">MagicAnnotator</string>
    <string name="app_name_gui">Magic Annotator</string>
    <string name="app_license">Magic Annotator - The only thing you need to write down whatever you want.\n\nCopyright (C) 2013 Nahuel Barrios &lt;barrios.nahuel@gmail.com&gt;.\n\nThis
        program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
        GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License
        along with this program. If not, see &lt;http://www.gnu.org/licenses/&gt;.
    </string>

    <!-- Commons -->
    <string name="add">Add</string>
    <string name="annotateHand">Write down!</string>
    <string name="commonLabel_done">Done</string>
    <string name="commonLabel_OK">OK</string>
    <string name="commonLabel_someoneLost">lost :(</string>
    <string name="chooseLooser">Who lost?</string>
    <string name="chooseLoosers">Who lost?</string>
    <string name="defaultInitialGameScore">0</string>
    <string name="marketItem_initialNumberOfItems">1</string>
    <string name="plus">+</string>
    <string name="substract">-</string>
    <string name="play">Play!</string>
    <string name="player">Player</string>
    <string name="mustSelectAtLeastOne">You must select at least 1.</string>
    <string name="we">We</string>
    <string name="they">They</string>
    <string name="message_must_select_between_3_and_12_players">Must select between 3 and 12 players.</string>
    <string name="message_truco_invalid_number_of_selected_players">Number of players must be 2, 4 or 6.</string>

    <!-- ChooseAnnotatorActivity -->
    <string name="chooseAnnotator_title">What do you want?</string>

    <!--Annotators ID. Must have the same value in the list-->
    <string name="annotator_chancho">Chancho</string>
    <string name="annotator_golf">Golf</string>
    <string name="annotator_market">Supermarket list</string>
    <string name="annotator_truco">Truco</string>
    <string name="annotator_tute">Tute</string>
    <string name="annotator_otro">Other</string>

    <string-array name="chooseAnnotator_annotatorsValues">
        <item>Chancho</item>
        <item>Golf</item>
        <item>Supermarket list</item>
        <item>Truco</item>
        <item>Tute</item>
        <item>Other</item>
    </string-array>

    <string name="chooseAnnotator_about">About</string>

    <!-- AboutActivity -->
    <string name="about_title">About this application:</string>

    <string name="about_introduction">This application was created with the idea of ​​facilitating the user in a simple and effective task scoring a
        truco game, chancho, tute, the list of things that you have to buy when you go to the supermarket, or other basic annotation.
    </string>
    <string name="about_contact">You can contact me with any questions or to report an error, through the web site of the project:
    </string>
    <string name="about_permissions">The internet access permissions are only used to retrieve information from the application to know which are the
        most widely used scoring and improve them, at no time will read private information.
    </string>
    <string name="about_projectUrl">github.com/barriosnahuel/magicAnnotator</string>
    <string name="about_projectUrl_complete">https://github.com/barriosnahuel/magicAnnotator</string>
    <string name="about_greetings">Hope to be useful!</string>
    <string name="about_viewLicense">View license</string>
    <string name="about_license">License</string>

    <!-- ChoosePlayersActivity -->
    <string name="choosePlayers_title">Who\'s playing?</string>
    <string name="choosePlayers_newPlayer">New player</string>
    <string name="choosePlayers_selected">Selected:</string>
    <string name="newplayer_createPlayer">Create!</string>
    <string name="newplayer_enterNickName">Nickname:</string>
    <string name="choosePlayers_makeTeams">Create teams</string>
    <string name="choosePlayers_playerAlreadyExists">it\'s already created</string>
    <string name="choosePlayersMenuItem_deleteAll">Delete all</string>

    <!-- ViewTeamsActivity -->
    <string name="viewTeams_title">Teams:</string>

    <!-- GenericAnnotatorActivity -->
    <string name="genericannotator_scores">Scores</string>

    <!-- TrucoAnnotatorActivity -->
    <string name="trucoAnnotator_doYouWannaThrowKings">Do you wanna throw kings?</string>
    <string name="trucoAnnotator_throwKings">Throw kings</string>
    <string name="trucoAnnotator_annotateNow">Write down now!</string>
    <string name="trucoAnnotator_youWin">We win!</string>
    <string name="trucoAnnotator_theyWin">They win :(</string>
    <string name="trucoAnnotator_labelNewGame">New game</string>
    <string name="trucoAnnotator_labelResult">Score</string>
    <string name="trucoAnnotator_labelDoTapOnYourTeamToAddScore">Tap over your device to add points.</string>

    <!-- TutePartialResultsActivity -->
    <string name="tutePartialResults_addCapote">Add capote</string>
    <string name="tutePartialResults_addTute">Add tute</string>
    <string name="tutePartialResults_whoDidThat">Who did it?</string>
    <string name="tutePartialResults_lostHands">Lost hands</string>
    <string name="tutePartialResults_lostHands_short">LH</string>
    <string name="tutePartialResults_capotes">Capotes</string>
    <string name="tutePartialResults_tutes">Tutes</string>

    <!-- Truco -->
    <string name="truco_team1_we">We</string>
    <string name="truco_team2_them">They</string>

    <!-- MarketAnnotatorActivity -->
    <string name="marketAnnotator_myMarketList">My market list</string>
    <string name="marketAnnotator_whatDoYouNeed">What do you need?</string>
    <string name="marketAnnotatorMenu_updateQuantitiesToZero">Reset to 0</string>
    <string name="marketAnnotatorMenuItem_deleteAll">Delete list</string>
    <string name="marketAnnotatorMenuItem_checkAllItems">Select all</string>
    <string name="marketAnnotatorMenuItem_uncheckAllItems">Unselect all</string>

    <string name="group_one">Group 1</string>
    <string name="group_two">Group 2</string>
    <string name="by_nahuel_barrios">By Nahuel Barrios.</string>
    <string name="start_up_image_content_description">The application\'s logo.</string>
    <string name="golfAnnotator_selectNumberOfHoles">How many holes are you gonna play?</string>
    <string name="golfAnnotator_holeNumber">Hole number:</string>
    <string name="hits">Hits</string>
    <string name="golfAnnotator_defaultHitsPerHole">Default number of hits?</string>
    <string name="final_result">Final result</string>
    <string name="golfAnnotator_totalHits">Total hits</string>
    <string name="share">Share</string>
    <string name="share_by">Share via</string>
    <string name="need_you_to_buy_theese_things">I need you to buy the following things:</string>
    <string name="things_to_buy">Things to buy at the market</string>
    <string name="golfAnnotator_nextHole">Next hole</string>
    <string name="golfAnnotator_selectStartingHole">Select starting hole</string>
    <string name="rate">Rate Magic Annotator</string>
    <string name="pleaseRateApp">Would you like to take a moment to rate Magic Annotator?\nThanks for your support!</string>
    <string name="remindMeLater">Remind me later</string>
    <string name="noThanks">No, thanks!</string>

</resources>