<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2012 Nahuel Barrios <barrios.nahuel@gmail.com>.
  ~ No se reconocerá ningún tipo de garantía.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/about_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:text="@string/about_introduction"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/about_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:text="@string/about_contact"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/about_projectUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/about_projectUrl"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/about_greetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:text="@string/about_greetings"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</ScrollView>